--- a/frontend/task2/index.html
+++ b/frontend/task2/index.html
@@ -23,109 +23,117 @@
 
 <body>
     <div id="login"
-        class="container-fluid d-flex justify-content-center align-items-center bg-gradient-primary text-white"
-        style="min-height: 100vh;">
+        class="container-fluid d-flex justify-content-center align-items-center bg-gradient-primary text-black   "
+        style="min-height: 100vh; color: #A7BEAE;">
+        <div style="background:#E7E8D1 ;  backdrop-filter: blur(30px);" class=" rounded p-2 ">
 
-        <form id="myForm" onsubmit="handleSubmit(event)" class="row g-3 mx-auto">
 
-            <!-- Left Column -->
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
-                    <span class="text-danger" id="nameerr"></span>
-                </div>
+            <form id="myForm" onsubmit="handleSubmit(event)" class="row g-3 mx-auto">
 
-                <div class="form-group">
-                    <label for="age">Age</label>
-                    <input type="number" id="age" class="form-control">
-                    <span class="text-danger" id="ageerr"></span>
-
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" class="form-control">
-                    <span class="text-danger" id="emaileerr"></span>
-
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control">
-                    <span class="text-danger" id="passeerr"></span>
-
-                </div>
-                <div class="form-group">
-                    <label for="fileupload">Profile Picture</label>
-                    <input class="form-control-file" id="fileupload" type="file" accept=".png, .jpg, .jpeg"
-                        onchange="upload()">
-                    <span class="text-danger" id="fileerr"></span>
-                </div>
-
-                <div class="form-group">
-                    <label for="gender">Gender</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gender" id="male" value="male">
-                        <label class="form-check-label" for="male">Male</label>
+                <!-- Left Column -->
+                <div class="col-md-6">
+                    <div class="form-group" style="order: 1;">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" class="form-control" required>
+                        <span class="text-danger" id="nameerr"></span>
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gender" id="female" value="female">
-                        <label class="form-check-label" for="female">Female</label>
+
+                    <div class="form-group">
+                        <label for="age">Age</label>
+                        <input type="number" id="age" class="form-control" required>
+                        <span class="text-danger" id="ageerr"></span>
+
                     </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="gender" id="other" value="other">
-                        <label class="form-check-label" for="other">Other</label>
+
+
+                    <div class="form-group">
+                        <label for="dob">DOB</label>
+                        <input type="date" id="dob" class="form-control" required>
+                        <span class="text-danger" id="doberr"></span>
+
                     </div>
-                    <span class="text-danger" id="gendererr"></span>
+                    <div class="form-group">
+                        <label for="graduation">State</label>
+                        <select id="graduation" aria-label="select example" class="form-select">
+                            <option selected>Select State</option>
+                            <option>Karnataka</option>
+                            <option>Andhra</option>
+                            <option>Kerla</option>
+                            <option>TamilNadu</option>
+                        </select>
+                        <span class="text-danger" id="garderr"></span>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="gender">Gender</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gender" id="male" value="male" required>
+                            <label class="form-check-label" for="male">Male</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gender" id="female" value="female"
+                                required>
+                            <label class="form-check-label" for="female">Female</label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="gender" id="other" value="other"
+                                required>
+                            <label class="form-check-label" for="other">Other</label>
+                        </div>
+                        <span class="text-danger" id="gendererr"></span>
+
+                    </div>
 
                 </div>
-            </div>
 
-            <!-- Right Column -->
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="dob">DOB</label>
-                    <input type="date" id="dob" class="form-control">
-                    <span class="text-danger" id="doberr"></span>
+                <!-- Right Column -->
+                <div class="col-md-6">
+                    <div class="form-group" style="order: 2;">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" class="form-control" required>
+                        <span class="text-danger" id="emaileerr"></span>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" class="form-control" required>
+                        <span class="text-danger" id="passeerr"></span>
+
+                    </div>
+
+
+
+
+                    <div class="form-group">
+                        <label for="feedback">Address</label>
+                        <textarea class="form-control" id="feedback" rows="4"></textarea>
+                        <span class="text-danger" id="feedbackerr"></span>
+
+                    </div>
+                    <div class="form-group">
+                        <img class="form-control" id="profile" src="./assets/profile.png" alt="Profile Picture">
+                        <span class="text-danger" id="imageerr"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="fileupload">Profile Picture</label>
+                        <input class="form-control-file" id="fileupload" type="file" accept=".png, .jpg, .jpegrequired"
+                            onchange="upload()">
+                        <span class="text-danger" id="fileerr"></span>
+                    </div>
 
                 </div>
 
-                <div class="form-group">
-                    <label for="graduation">Graduation</label>
-                    <select id="graduation" aria-label="select example" class="form-select">
-                        <option selected>10th</option>
-                        <option>1pu</option>
-                        <option>2pu</option>
-                        <option>ug</option>
-                        <option>pg</option>
-                    </select>
-                    <span class="text-danger" id="garderr"></span>
-
+                <!-- Submit Button -->
+                <div class="col-12">
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="reset" onclick="handleReset()" class="btn btn-warning">reset</button>
+                    </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="feedback">Feedback</label>
-                    <textarea class="form-control" id="feedback" rows="3"></textarea>
-                    <span class="text-danger" id="feedbackerr"></span>
-
-                </div>
-                <div class="form-group">
-                    <img class="form-control" id="profile" src="./assets/profile.png" alt="Profile Picture">
-                    <span class="text-danger" id="imageerr"></span>
-                </div>
-
-            </div>
-
-            <!-- Submit Button -->
-            <div class="col-12">
-                <div class="form-group text-center">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" onclick="handleReset()" class="btn btn-warning">reset</button>
-                </div>
-            </div>
-
-        </form>
+            </form>
+        </div>
     </div>
 
     <script>
