--- a/frontend/task5/index.html
+++ b/frontend/task5/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yaga</title>
@@ -11,78 +10,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class=" col-lg-12 bg container-fluid row">
-        <div class="col-lg-12  d-flex justify-content-lg-center align-content-lg-center align-items-lg-center ">
-            <div class="shadow-lg bg-white d-flex rounded-3 col-lg-8">
-
-                <div class=" p-lg-3 col-lg-3 rounded-4 d-lg-flex align-items-lg-center bg-white">
-                    <img class="posepic" src="./asset/photo.jpg" alt="posepic">
-                </div>
-                <div class="container">
-                    <div class="col-lg-9 d-lg-flex  justify-content-lg-center">
-                        <p class="mt-5">Register Yoga class</p>
+    <div class=" d-lg-flex d-xl-flex d-xxl-flex d-md-flex container-fluid bg justify-content-md-center">
+        <div class="row justify-content-center align-items-center">
+            <div
+                class="col-sm-12 col-md-12 col-xl-8 col-xl-12 col-xxl-12 bg-white shadow-xxl rounded-3 d-flex justify-content-md-center justify-content-center">
+                <div class="row">
+                    <div
+                        class="col-sm-12  col-md-3  p-md-0 col-xxl-3 bg-white rounded-3 d-flex justify-content-sm-center align-items-center justify-content-center">
+                        <img class="posepic" src="./asset/photo.jpg" alt="posepic">
                     </div>
-                    <div class=" d-lg-flex  row col-lg-12">
-                        <div class="col-lg-6 col-xl-6">
-                            <div class="form-group ">
-                                <input type="text" class="form-control" placeholder="Enter your Name">
+                    <div class="col-md-9 col-xxl-9">
+                        <div class="container-md container-xxl">
+                            <div class="row justify-content-center pt-lg-2 pt-xl-2 pt-xxl-2 ">
+                                <p class=" text-center">Register Yoga class</p>
                             </div>
-                            <div class="form-group mt-lg-5">
-                                <input type="number" id="age" max="2" class="form-control"
-                                    placeholder="Enter your age" />
-                            </div>
+                            <div class="row col-sm-12">
+                                <div class=" col-md-6 col-xxl-6">
+                                    <div class="form-group mt-sm-5">
+                                        <input type="text" class="form-control" placeholder="Enter your Name">
+                                    </div>
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <input type="email" class="form-control" placeholder="Enter your Email">
+                                    </div>
 
-                            <div class="form-group mt-lg-5">
-                                <select class="form-control">
-                                    <option selected>Choose State</option>
-                                    <option>Karnataka</option>
-                                    <option>Andhra</option>
-                                    <option>Kerla</option>
-                                    <option>TamilNadu</option>
-                                </select>
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <input type="password" class="form-control" placeholder="Enter the password">
+                                    </div>
+
+
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <input type="number" id="age" max="2" class="form-control"
+                                            placeholder="Enter your age">
+                                    </div>
+
+                                </div>
+                                <div class=" col-md-6 col-xxl-6">
+                                    <div class="form-group mt-sm-5">
+                                        <input type="tel" class="form-control" placeholder="Enter mobile number">
+                                    </div>
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <select class="form-control">
+                                            <option selected>Choose State</option>
+                                            <option>Karnataka</option>
+                                            <option>Andhra</option>
+                                            <option>Kerala</option>
+                                            <option>Tamil Nadu</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <input type="password" class="form-control"
+                                            placeholder="Enter the confirm password">
+                                    </div>
+
+
+
+
+                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
+                                        <input type="date" class="form-control" id="dob" min="1980-01-01">
+                                    </div>
+                                </div>
                             </div>
-                            <div class="form-group mt-lg-5">
-                                <input type="email" class="form-control" placeholder="Enter your Email">
+                            <div class="row w-25 d-lg-flex container-lg justify-content-lg-end p-4">
+                                <button class=" btn btn-primary" type="button">Submit</button>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="form-group ">
-                                <input type="tel" class="form-control" placeholder="Enter  mobile number">
-                            </div>
-                            <div class="form-group mt-lg-5">
-                                <input type="password" class="form-control" placeholder="Enter the  password">
-                            </div>
-
-                            <div class="form-group mt-lg-5">
-                                <input type="password" class="form-control" placeholder="Enter  the confirm password ">
-                            </div>
-                            <div class="form-group mt-lg-5">
-                                <input type="date" class="form-control" id="dob" min="1980-01-01">
-                            </div>
-                        </div>
-                    </div>
-                    <div class=" container-lg p-lg-4 d-lg-flex justify-content-lg-end">
-
-                        <button class=" btn btn-primary" type="button">Submit</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+
+    <script>
+        var inputAge = document.getElementById('age');
+        inputAge.onkeydown = function (event) {
+            if (isNaN(event.key) && event.key !== 'Backspace') {
+                event.preventDefault();
+            }
+        };
+        let today = new Date().toISOString().slice(0, 10);
+        document.getElementById("dob").max = today;
+    </script>
+
 </body>
-<script>
-    var inputAge = document.getElementById('age');
-    inputAge.onkeydown = function (event) {
-        if (isNaN(event.key) && event.key !== 'Backspace') {
-            event.preventDefault();
-        }
-    };
-    let today = new Date().toISOString().slice(0, 10);
-    document.getElementById("dob").max = today;
-</script>
 
 </html>
