--- a/frontend/task5/index.html
+++ b/frontend/task5/index.html
@@ -32,50 +32,81 @@
                                 <p class=" text-center">Register Yoga class</p>
                             </div>
                             <div class="row col-sm-12">
-                                <div class=" col-md-6 col-xxl-6">
-                                    <div class="form-group mt-sm-5">
-                                        <input type="text" class="form-control" placeholder="Enter your Name">
-                                    </div>
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <input type="email" class="form-control" placeholder="Enter your Email">
-                                    </div>
 
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <input type="password" class="form-control" placeholder="Enter the password">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="text" class="form-control" placeholder="Enter your Name">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="tel" class="form-control"
+                                                    placeholder="Enter mobile number">
+                                            </div>
+                                        </div>
                                     </div>
-
-
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <input type="number" id="age" max="2" class="form-control"
-                                            placeholder="Enter your age">
+                                    <div class="row">
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="email" class="form-control" placeholder="Enter your Email">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <select class="form-control">
+                                                    <option selected>Choose State</option>
+                                                    <option>Karnataka</option>
+                                                    <option>Andhra</option>
+                                                    <option>Kerala</option>
+                                                    <option>Tamil Nadu</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
-
+                                    <div class="row">
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="password" class="form-control"
+                                                    placeholder="Enter the password">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="password" class="form-control"
+                                                    placeholder="Enter the confirm password">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="number" id="age" class="form-control"
+                                                    placeholder="Enter your age">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="date" class="form-control" id="dob" min="1980-01-01">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="form-group mt-4">
+                                                <input type="file" class="form-control-file" id="fileInput">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-xxl-6">
+                                            <div class="preview-image mt-4">
+                                                <img id="preview" src="#" alt="Preview"
+                                                    style="max-width: 100%; height: auto;">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class=" col-md-6 col-xxl-6">
-                                    <div class="form-group mt-sm-5">
-                                        <input type="tel" class="form-control" placeholder="Enter mobile number">
-                                    </div>
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <select class="form-control">
-                                            <option selected>Choose State</option>
-                                            <option>Karnataka</option>
-                                            <option>Andhra</option>
-                                            <option>Kerala</option>
-                                            <option>Tamil Nadu</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <input type="password" class="form-control"
-                                            placeholder="Enter the confirm password">
-                                    </div>
 
-
-
-
-                                    <div class="form-group mt-sm-5 mt-xxl-5 mt-md-3 mt-xl-4">
-                                        <input type="date" class="form-control" id="dob" min="1980-01-01">
-                                    </div>
-                                </div>
                             </div>
                             <div class="row w-25 d-lg-flex container-lg justify-content-lg-end p-4">
                                 <button class=" btn btn-primary" type="button">Submit</button>
