--- a/frontend/task5/index.html
+++ b/frontend/task5/index.html
@@ -176,16 +176,27 @@
 
             if (fileUploadInput.files && fileUploadInput.files[0]) {
                 const file = fileUploadInput.files[0];
-
+                console.log(file, "sdfas")
                 if (file.type.startsWith('image/')) {
                     const reader = new FileReader();
 
                     reader.onload = function (e) {
                         previewImage.src = e.target.result;
                         fileError.textContent = '';
-
-
-                        // console.log(e.target.result);
+                        let url = file.name;
+                        console.image = function (url, size = 100) {
+                            const image = new Image();
+                            image.src = url;
+                            image.onload = function () {
+                                var style = [
+                                    'font-size: 1px;',
+                                    'padding: ' + this.height / 100 * size + 'px ' + this.width / 100 * size + 'px;',
+                                    'background: url(' + url + ') no-repeat;',
+                                    'background-size: contain;'
+                                ].join(' ');
+                                console.log('%c ', style);
+                            };
+                        };
                     };
 
                     reader.readAsDataURL(file);
