--- a/frontend/task3-copy/index.html
+++ b/frontend/task3-copy/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Coral Future</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eVST6qv/sfKQHrp4zYTB0jvzK3Fu5t3QFt3Kb8jLlujQkHhpWE4eFzvJOK5wBo5B" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="icon" href="./assets/tabicon.jpg">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -150,6 +157,21 @@
         </div>
     </div>
     <session>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/asset 15.png" class="d-block w-75" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/asset 16.png" class="d-block w-75" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/asset 17.png" class="d-block w-75" alt="...">
+            </div>
+        </div>
+
+
+
         <div class="position-relative card-container pt-5 mt-lg-5 my-md-5 my-lg-5">
             <div
                 class="  d-lg-flex d-md-flex flex-wrap fadedBlue  text-center justify-content-md-center justify-content-lg-center text-white">
@@ -165,6 +187,14 @@
                             projects</a>.
                     </p>
                 </div>
+
+
+
+
+
+
+
+
                 <div
                     class=" nm d-lg-flex position-absolute mtb bottom-0 d-md-flex container-fluid justify-content-lg-around justify-content-md-around align-content-end">
                     <div class="card col-lg-3 col-md-3   text-start" style="width: 18vw;">
@@ -366,6 +396,28 @@
                     <p class="sectionDesc pb-5">Explore the current trends through the lens of our subject experts.</a>.
                     </p>
                 </div>
+
+
+
+                <div id="" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/asset 14.png" class="d-block w-100" alt="Slide 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/asset 15.png" class="d-block w-100" alt="Slide 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/asset 16.png" class="d-block w-100" alt="Slide 3">
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
                 <div
                     class=" nm d-lg-flex mtb2 d-md-flex container-fluid justify-content-lg-around justify-content-md-around align-content-end align-content-md-end">
                     <div class="card col-lg-3 col-md-3  text-start" style="width: 18vw;">
@@ -381,6 +433,7 @@
                             </a>
                         </div>
                     </div>
+
                     <div class="card col-lg-3   text-start  " style="width: 18vw;">
                         <img alt="card-img" class="card-img-top" src="./assets/asset 16.png">
                         <div class="card-body"><a href="#" class="  spanP">
@@ -424,6 +477,7 @@
             </div>
         </div>
     </session>
+
     <div class="gravel p-md-3 text-white pt-lg-5 mt-lg-5 col-lg-12">
         <div class="  d-flex container ">
             <div class="col-lg-4 justify-content-start d-flex container">
@@ -451,6 +505,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-6 d-flex justify-content-lg-evenly ">
                 <ul class=" list-group ">
 
@@ -486,6 +541,13 @@
             </div>
         </div>
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-+VoWq4JUTDSxQ3mzG+raFJfn4BEaYOOhkI5Ip4x5pdx4nNzI6K4Qc6JEexHcFVwJ"
+        crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
